<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.marcelopaglione.asprova2.Questao7_add_MainActivity"
    tools:showIn="@layout/activity_questao7_add__main"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nome:"
        android:id="@+id/editText_nome_t4"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sexoM"
            android:id="@+id/radioButton_masculino_t4"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sexoF"
            android:id="@+id/radioButton_feminino_t4"
            android:checked="false" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:hint="Idade:"
        android:layout_height="wrap_content"
        android:id="@+id/editText_idade_t4"
        android:layout_gravity="center_horizontal"
        android:numeric="integer"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_salvar"
        android:id="@+id/button_salvar_t4"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
